--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -1186,10 +1186,10 @@
             </objects>
             <point key="canvasLocation" x="-44" y="3697.5"/>
         </scene>
-        <!--Got Navi View Controller-->
+        <!--Add Match View Controller-->
         <scene sceneID="Hrs-D3-faC">
             <objects>
-                <viewController id="ZNT-a6-FMP" customClass="GotNaviViewController" customModule="FlavorFinder" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="ZNT-a6-FMP" customClass="AddMatchViewController" customModule="FlavorFinder" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="woA-AD-xzo"/>
                         <viewControllerLayoutGuide type="bottom" id="ymv-Td-N2Y"/>
@@ -1198,15 +1198,52 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Add New Match" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jpX-hc-QcL">
-                                <rect key="frame" x="191" y="154" width="122" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="KKr-JG-Z59">
+                                <rect key="frame" x="83" y="118" width="435" height="68"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Which ingredient are you creating a new match for?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gGF-Gt-rly">
+                                        <rect key="frame" x="0.0" y="0.0" width="435" height="24"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="PBK-ye-MHS">
+                                        <rect key="frame" x="0.0" y="24" width="435" height="44"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </searchBar>
+                                </subviews>
+                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nLM-6W-2nD">
+                                <rect key="frame" x="83" y="186" width="435" height="271"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="searchResultCell" id="NyU-Nw-ExU">
+                                        <rect key="frame" x="0.0" y="28" width="435" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NyU-Nw-ExU" id="SIW-2E-DJh">
+                                            <rect key="frame" x="0.0" y="0.0" width="435" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ymv-Td-N2Y" firstAttribute="top" secondItem="nLM-6W-2nD" secondAttribute="bottom" constant="94" id="18a-a2-7Pt"/>
+                            <constraint firstItem="KKr-JG-Z59" firstAttribute="top" secondItem="woA-AD-xzo" secondAttribute="bottom" constant="54" id="7uZ-Sp-nsU"/>
+                            <constraint firstItem="nLM-6W-2nD" firstAttribute="top" secondItem="KKr-JG-Z59" secondAttribute="bottom" id="Ewc-ro-nQd"/>
+                            <constraint firstItem="KKr-JG-Z59" firstAttribute="leading" secondItem="Mm7-Ih-cDz" secondAttribute="leadingMargin" constant="63" id="XXb-I7-aM3"/>
+                            <constraint firstItem="KKr-JG-Z59" firstAttribute="trailing" secondItem="nLM-6W-2nD" secondAttribute="trailing" id="bf3-ge-oEu"/>
+                            <constraint firstItem="KKr-JG-Z59" firstAttribute="centerX" secondItem="Mm7-Ih-cDz" secondAttribute="centerX" id="ksk-Fj-Uen"/>
+                            <constraint firstItem="nLM-6W-2nD" firstAttribute="leading" secondItem="KKr-JG-Z59" secondAttribute="leading" id="otp-LV-6IR"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="chooseIngredientSearchBar" destination="PBK-ye-MHS" id="d1V-7u-kyy"/>
+                        <outlet property="promptLabel" destination="gGF-Gt-rly" id="JsF-UZ-L4L"/>
+                        <outlet property="searchTableView" destination="nLM-6W-2nD" id="zer-a5-bAe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wB0-Bb-AI5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
