--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -1261,14 +1261,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Add Ingredient Page" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OsU-zJ-7HY">
-                                <rect key="frame" x="165" y="265" width="156" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name of new ingredient :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fyj-CA-fkS">
+                                <rect key="frame" x="198" y="108" width="204" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="DIY-bi-LPD"/>
+                                    <constraint firstAttribute="width" constant="204" id="rx6-tN-BhT"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IrF-xD-Jyr">
+                                <rect key="frame" x="95" y="140" width="411" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="sKy-it-8SA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You will need to propose at least one flavor match to complete the process of adding an ingredient." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pRK-me-oUD">
+                                <rect key="frame" x="164" y="178" width="272" height="76"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="272" id="NMA-aP-rdM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="IrF-xD-Jyr" firstAttribute="top" secondItem="fyj-CA-fkS" secondAttribute="bottom" constant="8" symbolic="YES" id="5L7-xO-R7T"/>
+                            <constraint firstItem="by8-ey-Bha" firstAttribute="top" secondItem="pRK-me-oUD" secondAttribute="bottom" constant="297" id="VNi-tD-ATt"/>
+                            <constraint firstItem="IrF-xD-Jyr" firstAttribute="leading" secondItem="CvN-rc-Ooi" secondAttribute="leadingMargin" constant="75" id="cmS-Cq-eGX"/>
+                            <constraint firstItem="fyj-CA-fkS" firstAttribute="centerX" secondItem="CvN-rc-Ooi" secondAttribute="centerX" id="fJq-pz-gaJ"/>
+                            <constraint firstItem="IrF-xD-Jyr" firstAttribute="centerX" secondItem="fyj-CA-fkS" secondAttribute="centerX" id="hbv-Ix-zKj"/>
+                            <constraint firstItem="pRK-me-oUD" firstAttribute="top" secondItem="IrF-xD-Jyr" secondAttribute="bottom" constant="8" symbolic="YES" id="jAB-8e-8TA"/>
+                            <constraint firstItem="pRK-me-oUD" firstAttribute="centerX" secondItem="IrF-xD-Jyr" secondAttribute="centerX" id="l7b-1Z-3EG"/>
+                            <constraint firstItem="fyj-CA-fkS" firstAttribute="top" secondItem="ANv-JC-efT" secondAttribute="bottom" constant="44" id="th5-l7-wPK"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qhN-Dg-YBT" userLabel="First Responder" sceneMemberID="firstResponder"/>
